--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "stripe": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
