--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/theme": "^2.1.5",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
